--- a/JavaScript/class-04-data-manipulation/challenge/index.html
+++ b/JavaScript/class-04-data-manipulation/challenge/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="scripts.js"></script>
-
 </head>
 <body>
-    <!-- DOM -->
-    <div></div>
+    <div id="clock"></div>
 </body>
 </html>
